Make sure the background image is behind the flash

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -1,5 +1,6 @@
 #landing-bg {
   position: fixed;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
